# ckb-pop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md
.github/workflows/: ci.yml  publish-presence.yml
contracts/: .gitignore  .rust-analyzer.toml  README.md
contracts/common/: constants.rs  utils.rs
contracts/dob-badge/: Cargo.toml  README.md  schema.json
contracts/dob-badge/src/: main.rs
contracts/event-anchor/: Cargo.toml  README.md  schema.json
contracts/event-anchor/src/: main.rs
docs/: index.html  script.js  styles.css
frontend/: .env.testnet  angular.json  index.tsx  package-lock.json  package.json  tsconfig.json
frontend/src/: app.component.html  app.routes.ts
frontend/src/components/bottom-nav/: bottom-nav.component.ts
frontend/src/components/claim/: claim.component.ts
frontend/src/components/gallery/: gallery.component.ts
frontend/src/components/header/: header.component.ts
frontend/src/components/integrate/: integrate.component.ts
frontend/src/components/landing/: landing.component.ts
frontend/src/components/live-qr/: live-qr.component.ts
frontend/src/components/minting/: minting.component.ts
frontend/src/lib/ckb-presence/: ckb.ts  index.ts  module.spec.ts  module.ts  types.ts
frontend/src/services/: claim.service.spec.ts  claim.service.ts  contract.service.ts  module.service.spec.ts  module.service.ts  poap.service.ts
scripts/: Cargo.toml
scripts/src/: http.rs  main.rs  routes.rs
scripts/src/cache/: sqlite.rs
scripts/src/crypto/: qr.rs  signatures.rs
scripts/src/module/: mod.rs
scripts/src/observe/: badges.rs  events.rs  payments.rs
scripts/src/relay/: tx.rs
scripts/src/rpc/: ckb.rs
scripts/src/types/: proofs.rs
