[package]
name = "dob-badge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DOB Badge type script for CKB-PoP protocol"

[dependencies]
ckb-std = { version = "1.1", features = ["type-id"] }
ckb-hash = { version = "0.119.0", default-features = false, features = ["ckb-contract"] }

[features]
default = []

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
