[package]
name = "event-anchor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Event Anchor type script for CKB-PoP protocol (optional)"

[dependencies]
ckb-std = "1.1"

[features]
default = []

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
